--- a/styles/transactions.css
+++ b/styles/transactions.css
@@ -257,10 +257,8 @@
   justify-content: center;
   align-items: center;
   font-size: 20px;
-
   border-radius: 10px;
-  width: 60%;
-  height: 40px;
+   width: 60%;
   padding: 10px;
 
   transition: 0.3s ease-in-out;
@@ -333,3 +331,7 @@ body.dark-mode .ct-image {
 body.dark-mode #food .ct-image {
     background-color: rgb(200, 152, 82) !important;
 }
+body.dark-mode .nav-item.active{
+  color: black;
+}
+/* ... existing CSS ... */
